--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
             <a href="#about">About</a>
             <a href="#community">Community</a>
         </nav>
+
+        <div class="header-controls">
+            <button id="theme-toggle" class="theme-btn">
+                <i class="fas fa-moon"></i>
+            </button>
+            <button id="menu-btn" class="menu-btn">
+                <i class="fas fa-bars"></i>
+            </button>
+        </div>
     </header>
-
-
 
     <div class="container" id="home">
         <div class="left-panel">
@@ -78,7 +85,7 @@
                 feature is crafted to support meaningful interaction.</p>
             <p>Circlo isn’t just another feed—it’s a place where your identity matters. We’re here to help you grow,
                 connect, and express yourself in a space that feels truly yours.</p>
-            <a href="asuransi-mobil.html" class="lihat-selengkapnya">Lihat selengkapnya</a>
+            <a href="" class="lihat-selengkapnya">Lihat selengkapnya</a>
         </div>
         <div class="about-card">
             <h2>Why Join Circlo?</h2>
@@ -88,7 +95,7 @@
                 commenting, or just exploring, you’ll find people who care about what you have to say.</p>
             <p>We’re not here to compete—we’re here to connect. Circlo is your space to grow relationships, discover new
                 perspectives, and build a digital presence that reflects who you truly are.</p>
-            <a href="asuransi-kesehatan.html" class="lihat-selengkapnya">Lihat selengkapnya</a>
+            <a href="" class="lihat-selengkapnya">Lihat selengkapnya</a>
         </div>
         <div class="about-card">
             <h2>How Circlo Works</h2>
@@ -99,7 +106,7 @@
                 Each step helps you shape your experience and discover people who resonate with your vibe.</p>
             <p>Once you're in, the possibilities open up. Follow creators, join conversations, and share your story.
                 Circlo adapts to you—because your digital space should feel like home.</p>
-            <a href="asuransi-jiwa.html" class="lihat-selengkapnya">Lihat selengkapnya</a>
+            <a href="" class="lihat-selengkapnya">Lihat selengkapnya</a>
         </div>
 
     </div>
