--- a/index.html
+++ b/index.html
@@ -78,35 +78,41 @@
     <div class="about-page">
         <div class="about-card">
             <h2>This Is Circlo</h2>
-            <p>Circlo is a social media platform built for real connection. We help you share your story, discover new
+            <p>Circlo is a social media platform built for real connection. We help you share your story, discover
+                new
                 voices, and grow your digital presence in a space that feels truly yours.</p>
-            <p>Whether you're a creator, a thinker, or someone who simply wants to be heard, Circlo gives you the tools
+            <p>Whether you're a creator, a thinker, or someone who simply wants to be heard, Circlo gives you the
+                tools
                 to build your presence with authenticity. From profile customization to community discovery, every
                 feature is crafted to support meaningful interaction.</p>
             <p>Circlo isn’t just another feed—it’s a place where your identity matters. We’re here to help you grow,
                 connect, and express yourself in a space that feels truly yours.</p>
-            <a href="" class="lihat-selengkapnya">Lihat selengkapnya</a>
+            <a href="snk.html" class="lihat-selengkapnya">Lihat selengkapnya</a>
         </div>
         <div class="about-card">
             <h2>Why Join Circlo?</h2>
-            <p>Because you deserve more than just likes. Circlo is built for people who want to connect deeply, share
+            <p>Because you deserve more than just likes. Circlo is built for people who want to connect deeply,
+                share
                 freely, and be part of something real. We focus on quality interactions, not empty engagement.</p>
             <p>Joining Circlo means stepping into a community that values your voice. Whether you're posting,
                 commenting, or just exploring, you’ll find people who care about what you have to say.</p>
-            <p>We’re not here to compete—we’re here to connect. Circlo is your space to grow relationships, discover new
+            <p>We’re not here to compete—we’re here to connect. Circlo is your space to grow relationships, discover
+                new
                 perspectives, and build a digital presence that reflects who you truly are.</p>
-            <a href="" class="lihat-selengkapnya">Lihat selengkapnya</a>
+            <a href="snk.html" class="lihat-selengkapnya">Lihat selengkapnya</a>
         </div>
         <div class="about-card">
-            <h2>How Circlo Works</h2>
+            <h2>How Circlo Works?</h2>
             <p>Getting started with Circlo is simple. First, sign up and create your account. Then, personalize your
-                profile to reflect your style, interests, and identity. Finally, build your space—your own corner of the
+                profile to reflect your style, interests, and identity. Finally, build your space—your own corner of
+                the
                 social world.</p>
-            <p>Our onboarding flow is designed to be intuitive and fast, so you can focus on what matters: connecting.
+            <p>Our onboarding flow is designed to be intuitive and fast, so you can focus on what matters:
+                connecting.
                 Each step helps you shape your experience and discover people who resonate with your vibe.</p>
             <p>Once you're in, the possibilities open up. Follow creators, join conversations, and share your story.
                 Circlo adapts to you—because your digital space should feel like home.</p>
-            <a href="" class="lihat-selengkapnya">Lihat selengkapnya</a>
+            <a href="snk.html" class="lihat-selengkapnya">Lihat selengkapnya</a>
         </div>
 
     </div>
@@ -119,28 +125,28 @@
             <img src="assets/img/ai3.jpg" alt="Tech">
             <h2>AI & Tech</h2>
             <p>Explore the latest in Artificial Intelligence, Machine Learning, and emerging technology trends.</p>
-            <a href="#" class="btn-join">Join</a>
+            <a href="login.html" class="btn-join">Join</a>
         </div>
 
         <div class="card">
             <img src="assets/img/nft.jpg" alt="Design">
             <h2>Design & Creativity</h2>
             <p>Connect with creative minds. Share your art, get feedback, and explore new inspirations.</p>
-            <a href="#" class="btn-join">Join</a>
+            <a href="login.html" class="btn-join">Join</a>
         </div>
 
         <div class="card">
             <img src="assets/img/business.jpg">
             <h2>Startups & Business</h2>
             <p>Discuss entrepreneurship, share your startup journey, and get advice from experienced founders.</p>
-            <a href="#" class="btn-join">Join</a>
+            <a href="login.html" class="btn-join">Join</a>
         </div>
 
         <div class="card">
             <img src="assets/img/banner.jpg" alt="Gaming">
             <h2>Gaming</h2>
             <p>Meet fellow gamers, talk about your favorite games, and join tournaments or challenges.</p>
-            <a href="#" class="btn-join">Join</a>
+            <a href="login.html" class="btn-join">Join</a>
         </div>
     </div>
 
