--- a/home.html
+++ b/home.html
@@ -34,7 +34,9 @@
 
             <aside class="sidebar-left">
                 <div class="profile-card card">
-                    <img src="https://i.pravatar.cc/80?u=user1" alt="Foto Profil" class="profile-pic">
+                    <a href="profile.html">
+                        <img src="https://i.pravatar.cc/80?u=user1" alt="Foto Profil" class="profile-pic">
+                    </a>
                     <h3>User</h3>
                     <p>@User</p>
                     <div class="profile-stats">
