update structure folder

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   </div>
   <div class="community-grid">
     <div class="card">
-      <img src="assets/img/ai3.jpg" alt="Tech" />
+      <img src="assets/img/index/ai3.jpg" alt="Tech" />
       <h2>AI & Tech</h2>
       <p>
         Explore the latest in Artificial Intelligence, Machine Learning, and
@@ -159,7 +159,7 @@
     </div>
 
     <div class="card">
-      <img src="assets/img/nft.jpg" alt="Design" />
+      <img src="assets/img/index/nft.jpg" alt="Design" />
       <h2>Design & Creativity</h2>
       <p>
         Connect with creative minds. Share your art, get feedback, and explore
@@ -169,7 +169,7 @@
     </div>
 
     <div class="card">
-      <img src="assets/img/business.jpg" />
+      <img src="assets/img/index/business.jpg" />
       <h2>Startups & Business</h2>
       <p>
         Discuss entrepreneurship, share your startup journey, and get advice
@@ -179,7 +179,7 @@
     </div>
 
     <div class="card">
-      <img src="assets/img/banner.jpg" alt="Gaming" />
+      <img src="assets/img/index/banner.jpg" alt="Gaming" />
       <h2>Gaming</h2>
       <p>
         Meet fellow gamers, talk about your favorite games, and join
