--- a/home.html
+++ b/home.html
@@ -54,11 +54,11 @@
                     <ul>
                         <li><a href="#"><i class="fas fa-user-friends"></i> Search</a></li>
                         <li><a href="#"><i class="fas fa-users"></i> Stories</a></li>
-                        <li><a href="#"><i class="fas fa-cog"></i> Pengaturan</a></li>
+                        <li><a href="./settings.html"><i class="fas fa-cog"></i> Settings</a></li>
                     </ul>
                 </div>
             </aside>
-
+9
             <section class="main-feed">
                 <div class="create-post card">
                     <img src="https://i.pravatar.cc/40?u=user1" alt="Foto Profil">
