--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings - Circlo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="settings.css">
+    <link rel="stylesheet" href="style/settings.css">
 </head>
 <body>
     <header class="main-header">
@@ -53,7 +53,7 @@
                     <ul>
                         <li><a href="#"><i class="fas fa-search"></i>Search</a></li>
                         <li><a href="#"><i class="fas fa-history"></i>Stories</a></li>
-                        <li><a href="./settings.html"><i class="fas fa-cog"></i>Pengaturan</a></li>
+                        <li><a href="./settings.html"><i class="fas fa-cog"></i>Settings</a></li>
                     </ul>
                 </div>
             </div>
@@ -153,7 +153,7 @@
         </div>
     </main>
 
-    <script src="index.js"></script>
-    <script src="settings.js"></script>
+    <script src="script/index.js"></script>
+    <script src="script/settings.js"></script>
 </body>
 </html>
