--- a/profile.html
+++ b/profile.html
@@ -40,7 +40,7 @@
         <ul>
           <li><a href="#"><i class="fas fa-user-friends"></i> Search</a></li>
           <li><a href="#"><i class="fas fa-users"></i> Stories</a></li>
-          <li><a href="#"><i class="fas fa-cog"></i> Pengaturan</a></li>
+          <li><a href="./settings.html"><i class="fas fa-cog"></i> Pengaturan</a></li>
         </ul>
       </div>
     </aside>
