--- a/login.html
+++ b/login.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - Circlo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style/logSignUp.css" />
   </head>
   <body>
+    <header class="theme-header">
+      <button id="theme-toggle" class="theme-btn">
+        <i class="fas fa-moon"></i>
+      </button>
+    </header>
     <div class="auth-container">
       <h2>Login ke Circlo</h2>
-      <form class="auth-form">
+      <form class="auth-form" id="loginForm">
         <label>Username / Email</label>
         <input
           type="text"
@@ -24,5 +30,6 @@
       
       <h5>Belum punya akun? <a href="sign-up.html">Daftar disini</a></h5>
     </div>
+    <script src="script/login.js"></script>
   </body>
 </html>
