update login & signup

--- a/login.html
+++ b/login.html
@@ -17,19 +17,19 @@
       <h2>Login ke Circlo</h2>
       <form class="auth-form" id="loginForm">
         <label>Username / Email</label>
-        <input
-          type="text"
-          placeholder="Masukkan username atau email"
-          required
-        />
-
+        <input type="text" placeholder="Masukkan username atau email" required />
         <label>Password</label>
         <input type="password" placeholder="Masukkan password" required />
         <button type="submit" class="btn-primary">Login</button>
       </form>
-      
       <h5>Belum punya akun? <a href="sign-up.html">Daftar disini</a></h5>
     </div>
+    <footer>
+      <div class="footer">
+        <div class="bottom-bar">
+          <p>Copyright &copy; 2025 - Circlo, All Rights Reserved</p>
+        </div>
+    </footer>
     <script src="script/login.js"></script>
   </body>
 </html>
