--- a/sign-up.html
+++ b/sign-up.html
@@ -46,6 +46,12 @@
       </form>
       <h5>Sudah punya akun? <a href="login.html">Masuk</a></h5>
     </div>
+    <footer>
+      <div class="footer">
+        <div class="bottom-bar">
+          <p>Copyright &copy; 2025 - Circlo, All Rights Reserved</p>
+        </div>
+    </footer>
     <script src="script/signUp.js"></script>    
   </body>
 </html>
