--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
             <nav class="main-nav">
                 <ul>
                     <li><a href="#" title="Home"><i class="fas fa-home"></i></a></li>
-                    <li><a href="#" title="Pesan"><i class="fas fa-paper-plane"></i></a></li>
+                    <li><a href="./chat.html" title="Chat"><i class="fas fa-paper-plane"></i></a></li>
                     <li><a href="#" title="Notifikasi"><i class="fas fa-bell"></i></a></li>
                 </ul>
             </nav>
