--- a/home.html
+++ b/home.html
@@ -52,7 +52,8 @@
                 </div>
                 <div class="navigation-card card">
                     <ul>
-                        <li><a href="#"><i class="fas fa-user-friends"></i> Search</a></li>
+                        <li><a href="#"><i class="fas fa-solid fa-magnifying-glass"></i> Search</a></li>
+                        <li><a href="./settings.html"><i class="fa-solid fa-globe   "></i> Community  </a></li>
                         <li><a href="#"><i class="fas fa-users"></i> Stories</a></li>
                         <li><a href="./settings.html"><i class="fas fa-cog"></i> Settings</a></li>
                     </ul>
