--- a/homeDark.html
+++ b/homeDark.html
@@ -24,7 +24,9 @@
                 </ul>
             </nav>
             <div class="user-profile">
-                <img src="https://i.pravatar.cc/40?u=user1" alt="Foto Profil">
+                <a href="profile.html">
+                    <img src="https://i.pravatar.cc/40?u=user1" alt="Foto Profil">
+                </a>
             </div>
         </div>
     </header>
@@ -48,9 +50,10 @@
                 </div>
                 <div class="navigation-card card">
                     <ul>
-                        <li><a href="#"><i class="fas fa-user-friends"></i> Search</a></li>
+                        <li><a href="#"><i class="fas fa-solid fa-magnifying-glass"></i> Search</a></li>
+                        <li><a href="./settings.html"><i class="fa-solid fa-globe   "></i> Community </a></li>
                         <li><a href="#"><i class="fas fa-users"></i> Stories</a></li>
-                        <li><a href="#"><i class="fas fa-cog"></i> Pengaturan</a></li>
+                        <li><a href="./settings.html"><i class="fas fa-cog"></i> Settings</a></li>  
                     </ul>
                 </div>
             </aside>
