--- a/home.html
+++ b/home.html
@@ -53,8 +53,7 @@
                 <div class="navigation-card card">
                     <ul>
                         <li><a href="#"><i class="fas fa-solid fa-magnifying-glass"></i> Search</a></li>
-                        <li><a href="./settings.html"><i class="fa-solid fa-globe   "></i> Community </a></li>
-                        <li><a href="#"><i class="fas fa-users"></i> Stories</a></li>
+                        <li><a href="story.html"><i class="fas fa-users"></i> Stories</a></li>
                         <li><a href="./settings.html"><i class="fas fa-cog"></i> Settings</a></li>
                     </ul>
                 </div>
