--- a/story.html
+++ b/story.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Story Carousel - Gambar & Video dengan Suara</title>
+    <title>Story</title>
     <link rel="stylesheet" href="style/story.css">
 
 </head>
 
 <body>
-    <div class="exit-button">&times;</div>
+    <div class="exit-button"><a href="home.html">&times;</a></div>
 
     <div class="story-carousel-container">
         <div class="story-wrapper">
