--- a/resultAccount.html
+++ b/resultAccount.html
@@ -75,7 +75,7 @@
               </a>
             </li>
             <li>
-              <a href="#"><i class="fas fa-users"></i> Stories</a>
+              <a href="story.html"><i class="fas fa-users"></i> Stories</a>
             </li>
             <li>
               <a href="./settings.html"><i class="fas fa-cog"></i> Settings</a>
