--- a/profile.html
+++ b/profile.html
@@ -56,15 +56,10 @@
               >
             </li>
             <li>
-              <a href="./settings.html"
-                ><i class="fa-solid fa-globe"></i> Community
-              </a>
+              <a href="story.html"><i class="fas fa-users"></i> Stories</a>
             </li>
             <li>
-              <a href="#"><i class="fas fa-users"></i> Stories</a>
-            </li>
-            <li>
-              <a href="./settings.html"><i class="fas fa-cog"></i> Settings</a>
+              <a href="settings.html"><i class="fas fa-cog"></i> Settings</a>
             </li>
           </ul>
         </div>
