--- a/homeDark.html
+++ b/homeDark.html
@@ -16,6 +16,13 @@
             <div class="logo">
                 <a href="#">Circlo</a>
             </div>
+
+            <button class="hamburger-menu" aria-label="Buka Menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+
             <nav class="main-nav">
                 <ul>
                     <li><a href="#" title="Home"><i class="fas fa-home"></i></a></li>
@@ -30,6 +37,14 @@
             </div>
         </div>
     </header>
+
+    <nav class="mobile-nav">
+        <ul>
+            <li><a href="search.html"><i class="fas fa-solid fa-magnifying-glass"></i> Search</a></li>
+            <li><a href="story.html"><i class="fas fa-users"></i> Stories</a></li>
+            <li><a href="./settings.html"><i class="fas fa-cog"></i> Settings</a></li>
+        </ul>
+    </nav>
 
     <main class="main-content">
         <div class="content-container">
@@ -220,5 +235,7 @@
     </main>
 
 </body>
+
+<script src="script/home.js"></script>
 
 </html>
