--- a/resultAccount.html
+++ b/resultAccount.html
@@ -18,6 +18,15 @@
     <header class="main-header">
       <div class="header-container">
         <div class="logo"><a href="#">Circlo</a></div>
+
+        <div class="hamburger-menu">
+          <div class="hamburger-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
+
         <nav class="main-nav">
           <ul>
             <li>
@@ -38,6 +47,29 @@
         </div>
       </div>
     </header>
+
+    <div class="mobile-menu-overlay">
+      <div class="mobile-menu-content">
+        <div class="mobile-menu-items">
+          <a href="home.html" class="mobile-menu-item">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+          </a>
+          <a href="search.html" class="mobile-menu-item">
+            <i class="fas fa-search"></i>
+            <span>Search</span>
+          </a>
+          <a href="story.html" class="mobile-menu-item">
+            <i class="fas fa-users"></i>
+            <span>Stories</span>
+          </a>
+          <a href="settings.html" class="mobile-menu-item">
+            <i class="fas fa-cog"></i>
+            <span>Settings</span>
+          </a>
+        </div>
+      </div>
+    </div>
 
     <div class="layout">
       <aside class="sidebar-left">
