--- a/search.html
+++ b/search.html
@@ -18,14 +18,23 @@
   <body>
     <header class="main-header">
       <div class="header-container">
-        <div href="index.html" class="logo"><a href="#">Circlo</a></div>
+        <div class="logo"><a href="#">Circlo</a></div>
+
+        <div class="hamburger-menu">
+          <div class="hamburger-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
+
         <nav class="main-nav">
           <ul>
             <li>
               <a href="home.html"><i class="fas fa-home"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fas fa-paper-plane"></i></a>
+              <a href="chat.html"><i class="fas fa-paper-plane"></i></a>
             </li>
             <li>
               <a href="#"><i class="fas fa-bell"></i></a>
@@ -39,6 +48,29 @@
         </div>
       </div>
     </header>
+
+    <div class="mobile-menu-overlay">
+      <div class="mobile-menu-content">
+        <div class="mobile-menu-items">
+          <a href="home.html" class="mobile-menu-item">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+          </a>
+          <a href="search.html" class="mobile-menu-item">
+            <i class="fas fa-search"></i>
+            <span>Search</span>
+          </a>
+          <a href="story.html" class="mobile-menu-item">
+            <i class="fas fa-users"></i>
+            <span>Stories</span>
+          </a>
+          <a href="settings.html" class="mobile-menu-item">
+            <i class="fas fa-cog"></i>
+            <span>Settings</span>
+          </a>
+        </div>
+      </div>
+    </div>
 
     <div class="layout">
       <aside class="sidebar-left">
