--- a/settings.html
+++ b/settings.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings - Circlo</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/style/settings.css">
 </head>
@@ -38,8 +37,8 @@
             </div>
             <div class="navigation-card card">
                 <ul>
-                    <li><a href="#"><i class="fas fa-user-friends"></i> Search</a></li>
-                    <li><a href="#"><i class="fas fa-users"></i> Stories</a></li>
+                    <li><a href="search.html"><i class="fas fa-user-friends"></i> Search</a></li>
+                    <li><a href="story.html"><i class="fas fa-users"></i> Stories</a></li>
                     <li><a href="./settings.html"><i class="fas fa-cog"></i> Pengaturan</a></li>
                 </ul>
             </div>
