--- a/home.html
+++ b/home.html
@@ -27,7 +27,6 @@
                 <ul>
                     <li><a href="#" title="Home"><i class="fas fa-home"></i></a></li>
                     <li><a href="chat.html" title="Chat"><i class="fas fa-paper-plane"></i></a></li>
-                    <li><a href="#" title="Notifikasi"><i class="fas fa-bell"></i></a></li>
                 </ul>
             </nav>
             <div class="user-profile">
@@ -43,7 +42,7 @@
             <li><a href="search.html"><i class="fas fa-solid fa-magnifying-glass"></i> Search</a></li>
             <li><a href="story.html"><i class="fas fa-users"></i> Stories</a></li>
             <li><a href="chat.html"><i class="fas fa-paper-plane"></i> Message</a></li>
-            <li><a href="./settings.html"><i class="fas fa-cog"></i> Settings</a></li>
+            <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
         </ul>
     </nav>
 
@@ -68,7 +67,7 @@
                 </div>
                 <div class="navigation-card card">
                     <ul>
-                        <li><a href="#"><i class="fas fa-solid fa-magnifying-glass"></i> Search</a></li>
+                        <li><a href="search.html"><i class="fas fa-solid fa-magnifying-glass"></i> Search</a></li>
                         <li><a href="story.html"><i class="fas fa-users"></i> Stories</a></li>
                         <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
                     </ul>
